openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llamastack
  namespace: glazos
spec:
  to:
    kind: Service
    name: llamastack-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
